fix overflow bug

--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,8 @@ body {
         -ms-flex-align: start;
             align-items: flex-start;
     padding-top: 6rem;
+    min-height: 150vh;
+    overflow: hidden;
   }
 }
 
